pac/net/kubectl/local/templates/memealyzernetapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd:
      kompose convert --file ./src/net/docker-compose.yml -o ./pac/kubectl/net
      --volumes hostPath
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: memealyzernetapi
  name: memealyzernetapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: memealyzernetapi
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd:
          kompose convert --file ./src/net/docker-compose.yml -o ./pac/kubectl/net
          --volumes hostPath
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: memealyzernetapi
    spec:
      containers:
        - env:
            - name: AZURE_COSMOS_COLLECTION
              valueFrom:
                configMapKeyRef:
                  key: AZURE_COSMOS_COLLECTION
                  name: env
            - name: AZURE_COSMOS_DB
              valueFrom:
                configMapKeyRef:
                  key: AZURE_COSMOS_DB
                  name: env
            - name: AZURE_COSMOS_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_COSMOS_ENDPOINT
                  name: env
            - name: AZURE_COSMOS_KEY_SECRET_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_COSMOS_KEY_SECRET_NAME
                  name: env
            - name: AZURE_FORM_RECOGNIZER_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_FORM_RECOGNIZER_ENDPOINT
                  name: env
            - name: AZURE_KEYVAULT_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_KEYVAULT_ENDPOINT
                  name: env
            - name: AZURE_STORAGE_BLOB_CONTAINER_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_BLOB_CONTAINER_NAME
                  name: env
            - name: AZURE_STORAGE_BLOB_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_BLOB_ENDPOINT
                  name: env
            - name: AZURE_STORAGE_QUEUE_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_QUEUE_ENDPOINT
                  name: env
            - name: AZURE_STORAGE_QUEUE_MSG_COUNT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_QUEUE_MSG_COUNT
                  name: env
            - name: AZURE_STORAGE_QUEUE_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_QUEUE_NAME
                  name: env
            - name: AZURE_STORAGE_QUEUE_RECEIVE_SLEEP
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_QUEUE_RECEIVE_SLEEP
                  name: env
            - name: AZURE_TEXT_ANALYTICS_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_TEXT_ANALYTICS_ENDPOINT
                  name: env
            - name: MEME_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: MEME_ENDPOINT
                  name: env
            - name: AZURE_STORAGE_TYPE
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_TYPE
                  name: env
            - name: AZURE_STORAGE_KEY_SECRET_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_KEY_SECRET_NAME
                  name: env
            - name: AZURE_STORAGE_TABLE_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_TABLE_NAME
                  name: env
            - name: AZURE_STORAGE_TABLE_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_TABLE_ENDPOINT
                  name: env
            - name: AZURE_STORAGE_ACCOUNT_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_ACCOUNT_NAME
                  name: env
            - name: AZURE_APP_CONFIG_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: AZURE_APP_CONFIG_ENDPOINT
                  name: env
            - name: AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME
                  name: env
            - name: AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME
                  name: env
            - name: AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME
                  name: env
          image: ${AZURE_CONTAINER_REGISTRY_SERVER}/memealyzernetapi:${CONTAINER_TAG}
          imagePullPolicy: "IfNotPresent"
          name: memealyzernetapi
          ports:
            - containerPort: 80
            - containerPort: 443
          resources: {}
          volumeMounts:
            - mountPath: /root/.azure
              name: memealyzernetapi-hostpath0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - hostPath:
            path: /run/desktop/mnt/host/wsl/.azure
            type: Directory
          name: memealyzernetapi-hostpath0
status: {}
